--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = ""
 authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]
 license = "MIT"
 readme = "README.md"
+packages = [{include = "pyreg", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.2"
 
 [build-system]
 requires = ["poetry-core"]
