--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.7"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
+pydantic = "^2.3.0"
 
 [build-system]
 requires = ["poetry-core"]
