--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Setup Pip Cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ${{ env.pythonLocation }}
-          key: pip-${{ hashFiles('.github/**/*.yaml') }}
+          key: pip-${{ hashFiles('.github/**/*.yml') }}
       - name: Setup Poetry Cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: /home/runner/.cache/pypoetry/virtualenvs
           key: poetry-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
